# fgosccalc

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  Makefile  Pipfile  README.md  README_dev.md  app.yaml  background.npz  calctweet.py  create_access_key.py  dropitemseditor.py  event.json  fgosccalc.cgi  fgosccalc.py  freequest.csv  freequest.json  hash_ce.csv  hash_drop.json  hash_item.csv  img2str.py  item.csv  item_bl.txt  item_nickname.csv  main.py  make_np_savez.py  makeprop.py  package-lock.json  package.json  pyproject.toml  requirements-docker.txt  requirements-gcloud.txt  requirements.txt  setting-dst.ini  std_item_nickname.csv  syurenquest.csv  tweet2csv.py  update.py
.github/workflows/: appengine.yml  cloudrun.yml  cloudrun_prod.yml  cloudrun_stg.yml  deploy.yml
data/json/: jikenbo.json  ooku.json  requiem.json  saberwars2.json  xmas2018.json  xmas2019.json
lib/: consts.py  questdb.py  setting.py  test_questdb.py  twitter.py
static/: gae_index.html  index.html  loading.css  report.jsx  style.css
static/js/src/: report.jsx
storage/: __init__.py  datastore.py  filesystem.py  test_filesystem.py
views/: error.tpl  items.tpl  result.tpl
