[tool.poetry]
name = "fgosccalc"
version = "0.1.0"
description = ""
authors = ["fgophi", "max747"]

[tool.poetry.dependencies]
python = "^3.8"
bottle = "^0.12.23"
requests = "^2.28.0"
# 検証が終わるまでいったん固定
numpy = "==1.21.1"
opencv-contrib-python = "==4.5.3.56"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
