[tool.poetry]
name = "fgosccalc"
version = "0.1.0"
description = ""
authors = ["fgophi", "max747"]

[tool.poetry.dependencies]
python = "^3.13"
bottle = "^0.12.23"
requests = "^2.28.0"
opencv-contrib-python = "^4.12.0.88"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
