[project]
name = "fgosccalc"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "max747" }
]
dependencies = [
    "numpy==1.25.2",
    "opencv-contrib-python==4.8.1.78",
    "bottle>=0.13.4",
    "requests>=2.32.5",
]
readme = "README.md"
requires-python = ">= 3.10"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
